// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copiable basic renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative clearfix bg-darken5 round"
    >
      <div
        class="inline-block"
      >
        <div
          class="py6 px12"
          data-testid="copiable-text-el"
          tabindex="-1"
        >
          <div
            class="my3 txt-mono txt-s mr24"
            style="word-wrap: break-word; overflow-wrap: break-word;"
          >
            thetextyoucopythetextyoucopythetextyoucopythetext you copy the text you copy 
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Copiable truncated renders as expected 1`] = `
<body>
  <div>
    <div
      class="relative clearfix bg-darken5 round"
    >
      <div
        class="inline-block"
      >
        <div
          class="py6 px12"
          data-testid="copiable-text-el"
          tabindex="-1"
        >
          <div
            class="my3 txt-mono txt-s mr24 txt-truncate"
          >
            the text you copy the text you copy the text you copy the text you copy the text you copy 
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
